# rules_nfpm

./: .bazelignore  .bazelrc  BUILD.bazel  LICENSE  README.md  WORKSPACE  def.bzl  deps.bzl  go.mod  go.sum
docs/: BUILD.bazel  readme-header.md
example/: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  workspace-status.sh
example/cmd/helloworld/: BUILD.bazel
go/: BUILD.bazel  go.mod  go.sum
go/cmd/nfpmwrapper/: BUILD.bazel  main.go
go/internal/cmd/nfpmwrapper/: BUILD.bazel  doc.go  nfpmwrapper.go  nfpmwrapper_test.go
go/internal/cmd/nfpmwrapper/testdata/generateconfig/: config.yaml.golden  config.yaml.in  stable-status.txt.in  volatile-status.txt.in
nfpm/: BUILD.bazel  defs.bzl  go_repositories.bzl  nfpm.patch  repositories.bzl  setup.bzl
nfpm/internal/: BUILD.bazel  maybe_go_repository.bzl  nfpm_package.bzl  nfpm_package_test.bzl  repositories.bzl  setup.bzl
scripts/: BUILD.bazel  generate-readme.sh
tests/: BUILD.bazel  test-config.yaml
tests/analysis/: BUILD.bazel  nfpm_package_test.bzl
