load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

gazelle(name = "gazelle")

sh_binary(
    name = "generate-go-build-files",
    srcs = [":gazelle-runner"],
    args = [
        "-bazel_run",
        "update",
        "-mode=fix",
        "-index=false",
        "go/",
    ],
)

sh_binary(
    name = "generate-go-repositories",
    srcs = [":gazelle-runner"],
    args = [
        "-bazel_run",
        "update-repos",
        "-from_file go/go.mod",
        "-to_macro=nfpm/go_repositories.bzl%_rules_nfpm_go_repositories",
        "-prune=true",
    ],
)

buildifier(
    name = "buildifier",
    lint_mode = "fix",
)
