load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

#
# Gazelle scripts
#

gazelle(name = "gazelle")

sh_binary(
    name = "generate-go-build-files",
    srcs = [":gazelle-runner"],
    args = [
        "-bazel_run",
        "update",
        "-mode=fix",
        "go/",
    ],
)

sh_binary(
    name = "generate-go-repositories",
    srcs = [":gazelle-runner"],
    args = [
        "-bazel_run",
        "update-repos",
        "-from_file go/go.mod",
        "-to_macro=nfpm/go_repositories.bzl%_rules_nfpm_go_repositories",
        "-prune=true",
    ],
)

sh_binary(
    name = "generate-example-go-build-files",
    srcs = [":gazelle-runner"],
    args = [
        "-bazel_run",
        "update",
        "-mode=fix",
        "example/",
    ],
)

#
# Buildifier
#

buildifier(
    name = "buildifier",
    lint_mode = "fix",
)

#
# README.md
#

sh_binary(
    name = "generate-readme",
    srcs = [":generate-readme.sh"],
    data = [
        "//docs:repository-readme",
    ],
    args = [
        "$(locations //docs:repository-readme)",
    ],
)
