load("//nfpm:defs.bzl", "nfpm_package")

filegroup(
    name = "text-files",
    srcs = glob([
        "*.txt",
    ]),
)

nfpm_package(
    name = "test.rpm",
    config = "test-config.yaml",
    deps = [":text-files"],
)

nfpm_package(
    name = "test.deb",
    config = "test-config.yaml",
    deps = [":text-files"],
)
