load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ericnorris/rules_nfpm/go/cmd/nfpmwrapper",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/cmd/nfpmwrapper:go_default_library",
        "@com_github_alecthomas_kong//:go_default_library",
    ],
)

go_binary(
    name = "nfpmwrapper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-contents",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
