load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "nfpmwrapper_lib",
    srcs = ["main.go"],
    importpath = "github.com/ericnorris/rules_nfpm/go/cmd/nfpmwrapper",
    visibility = ["//visibility:private"],
    deps = [
        "//go/internal/cmd/nfpmwrapper",
        "@com_github_alecthomas_kong//:kong",
    ],
)

go_binary(
    name = "nfpmwrapper",
    embed = [":nfpmwrapper_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-contents",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
