load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "nfpmwrapper.go",
    ],
    importpath = "github.com/ericnorris/rules_nfpm/go/internal/cmd/nfpmwrapper",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_goreleaser_nfpm_v2//:go_default_library",
        "@com_github_goreleaser_nfpm_v2//deb:go_default_library",
        "@com_github_goreleaser_nfpm_v2//rpm:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["nfpmwrapper_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)

sh_test(
    name = "go_default_test.accept",
    size = "small",
    srcs = [":go_default_test"],
    args = [
        "-accept",
    ],
    tags = ["manual"],
)

filegroup(
    name = "package-contents",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
