load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "nfpmwrapper",
    srcs = [
        "doc.go",
        "nfpmwrapper.go",
    ],
    importpath = "github.com/ericnorris/rules_nfpm/go/internal/cmd/nfpmwrapper",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_goreleaser_nfpm_v2//:nfpm",
        "@com_github_goreleaser_nfpm_v2//deb",
        "@com_github_goreleaser_nfpm_v2//rpm",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "nfpmwrapper_test",
    size = "small",
    srcs = ["nfpmwrapper_test.go"],
    data = glob(["testdata/**"]),
    embed = [":nfpmwrapper"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)

sh_test(
    name = "nfmpwrapper_test.accept",
    size = "small",
    srcs = [":nfpmwrapper_test"],
    args = [
        "-accept",
    ],
    tags = ["manual"],
)

filegroup(
    name = "package-contents",
    srcs = glob(["*"]),
    visibility = ["//:__subpackages__"],
)
